--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header id="home">
         <nav>
             <!-- <a href=""><i class="fa-solid fa-clapperboard fa-2xl" style="color: #0a51f5;"></i></a> -->
-            <h1>Movie-360</h1>
+            <h1>Movie.com</h1>
             <ul class="nav-links">
                 <li><a href="#home" id="#home">Home</a></li>
                 <li><a href="#popular_movies" id="#popular_movies">Popular movies</a></li>
@@ -84,19 +84,203 @@
     <!-- Home section end  -->
     <!-- popular movies  section start  -->
     <section class="popular_movies" id="popular_movies">
+        <h1>Popular_movies</h1>
+        <div class="popular-movie_card">
+
+            <img src="./img/Aquaman.jpg" width="100%" alt="">
+            <h4>Aquaman</h4>
+            <p>Lorem ipsum dolor.</p>
+            <h4>1080p</h4>
+            <div>
+                <i class="fa-solid fa-star" style="color: #f5e000;"></i>
+                <i class="fa-solid fa-star" style="color: #f5e000;"></i>
+                <i class="fa-solid fa-star" style="color: #f5e000;"></i>
+                <i class="fa-solid fa-star" style="color: #f5e000;"></i>
+                <i class="fa-solid fa-star" style="color: #f5e000;"></i>
+            </div>
+
+        </div>
+        <div class="popular-movie_card">
+            <img src="./img/amazing_spiderman.jpg" width="100%" alt="">
+            <h4>Amazing_spiderman</h4>
+            <p>Lorem ipsum dolor.</p>
+            <h4>1080p</h4>
+            <div>
+                <i class="fa-solid fa-star" style="color: #f5e000;"></i>
+                <i class="fa-solid fa-star" style="color: #f5e000;"></i>
+                <i class="fa-solid fa-star" style="color: #f5e000;"></i>
+                <i class="fa-solid fa-star" style="color: #f5e000;"></i>
+                <i class="fa-solid fa-star" style="color: #f5e000;"></i>
+            </div>
+        </div>
+        <div class="popular-movie_card">
+            <img src="./img/Batman.jpg" width="100%" alt="">
+            <h4>Batman</h4>
+            <p>Lorem ipsum dolor.</p>
+            <h4>1080p</h4>
+            <div>
+                <i class="fa-solid fa-star" style="color: #f5e000;"></i>
+                <i class="fa-solid fa-star" style="color: #f5e000;"></i>
+                <i class="fa-solid fa-star" style="color: #f5e000;"></i>
+                <i class="fa-solid fa-star" style="color: #f5e000;"></i>
+                <i class="fa-solid fa-star" style="color: #f5e000;"></i>
+            </div>
+        </div>
+        <div class="popular-movie_card">
+            <img src="./img/Captain america.jpg" width="100%" alt="">
+            <h4>Captain america</h4>
+            <p>Lorem ipsum dolor.</p>
+            <h4>1080p</h4>
+            <div>
+                <i class="fa-solid fa-star" style="color: #f5e000;"></i>
+                <i class="fa-solid fa-star" style="color: #f5e000;"></i>
+                <i class="fa-solid fa-star" style="color: #f5e000;"></i>
+                <i class="fa-solid fa-star" style="color: #f5e000;"></i>
+                <i class="fa-solid fa-star" style="color: #f5e000;"></i>
+            </div>
+        </div>
+        <div class="popular-movie_card">
+            <img src="./img/Captain_marvel.jpg" width="100%" alt="">
+            <h4>Captain_marvel</h4>
+            <p>Lorem ipsum dolor.</p>
+            <h4>1080p</h4>
+            <div>
+                <i class="fa-solid fa-star" style="color: #f5e000;"></i>
+                <i class="fa-solid fa-star" style="color: #f5e000;"></i>
+                <i class="fa-solid fa-star" style="color: #f5e000;"></i>
+                <i class="fa-solid fa-star" style="color: #f5e000;"></i>
+                <i class="fa-solid fa-star" style="color: #f5e000;"></i>
+            </div>
+        </div>
+        <div class="popular-movie_card">
+            <img src="./img/catchmeifyoucan.24x36_500x749.jpg" width="100%" alt="">
+            <h4>Catch-me-if-you-can</h4>
+            <p>Lorem ipsum dolor.</p>
+            <h4>1080p</h4>
+            <div>
+                <i class="fa-solid fa-star" style="color: #f5e000;"></i>
+                <i class="fa-solid fa-star" style="color: #f5e000;"></i>
+                <i class="fa-solid fa-star" style="color: #f5e000;"></i>
+                <i class="fa-solid fa-star" style="color: #ffff;"></i>
+                <i class="fa-solid fa-star" style="color: #ffff;"></i>
+            </div>
+        </div>
+        <div class="popular-movie_card">
+            <img src="./img/Deadpoo&Wovering.jpg" width="100%" alt="">
+            <h4>Deadpoo&Wovering</h4>
+            <p>Lorem ipsum dolor.</p>
+            <h4>1080p</h4>
+            <div>
+                <i class="fa-solid fa-star" style="color: #f5e000;"></i>
+                <i class="fa-solid fa-star" style="color: #f5e000;"></i>
+                <i class="fa-solid fa-star" style="color: #f5e000;"></i>
+                <i class="fa-solid fa-star" style="color: #f5e000;"></i>
+                <i class="fa-solid fa-star" style="color: #ffff;"></i>
+            </div>
+        </div>
+        <div class="popular-movie_card">
+            <img src="./img/Doctor-strange.jpg" width="100%" alt="">
+            <h4>Doctor-strange</h4>
+            <p>Lorem ipsum dolor.</p>
+            <h4>1080p</h4>
+            <div>
+                <i class="fa-solid fa-star" style="color: #f5e000;"></i>
+                <i class="fa-solid fa-star" style="color: #f5e000;"></i>
+                <i class="fa-solid fa-star" style="color: #f5e000;"></i>
+                <i class="fa-solid fa-star" style="color: #f5e000;"></i>
+                <i class="fa-solid fa-star" style="color: #f5e000;"></i>
+            </div>
+        </div>
+
 
     </section>
     <!-- popular movies section end  -->
 
     <!-- Movies details start  -->
     <section class="movies_details" id="movies_details">
+        <div class="movies_details_card">
+            <div class="movies_details-info">
+                <div>
+                    <h1>Movies-details</h1>
+                    <p>Holland's career began at age nine when he enrolled in a dancing class, where a choreographer
+                        noticed him and arranged
+                        for him to audition for a role in Billy Elliot the Musical at London's Victoria Palace Theatre.
+                        After two years of
+                        training, he secured a supporting part in 2008 and was upgraded to the title role that year,
+                        which he played until 2010.
+                        Holland made his film debut in the disaster drama The Impossible (2012) as a teenage tourist
+                    </p>
+                    <button class="movies_details-info_btn">More...</button>
+                </div>
+            </div>
+            <div class="movies_details-image">
+                <!-- <img src="" alt=""> -->
+                <div class="movies_details-image_actor">
+                    <h1>Movies-details</h1>
+                    <p>Once home to the most advanced civilization on Earth, the city of Atlantis is now an underwater
+                        kingdom ruled by the
+                        power-hungry King Orm. With a vast army at his disposal, Orm plans to conquer the remaining
+                        oceanic people -- and then
+                        the surface world. Standing in his way is Aquaman, Orm's half-human, half-Atlantean brother and
+                        true heir to the throne.
+                        With help from royal counselor Vulko, Aquaman must retrieve the legendary Trident of Atlan and
+                        embrace his destiny as
+                        protector of the deep.</p>
 
+
+                </div>
+            </div>
+
+
+        </div>
     </section>
     <!-- Movies details end  -->
 
     <!-- Coming soon start  -->
     <section class="coming_soon" id="coming_soon">
+        <div class="coming_soon_container">
+            <div class="coming_soon_container_card">
+                <img src="./img/Doctor-strange.jpg" height="70%" width="100%" alt="">
+                <h3>Doctor Strange</h3>
+                <p>Lorem, ipsum dolor.</p>
+            </div>
+            <div class="coming_soon_container_card">
+                <img src="./img/Doctor-strange.jpg" height="70%" width="100%" alt="">
+                <h3>Doctor Strange</h3>
+                <p>Lorem, ipsum dolor.</p>
+            </div>
+            <div class="coming_soon_container_card">
+                <img src="./img/Doctor-strange.jpg" height="70%" width="100%" alt="">
+                <h3>Doctor Strange</h3>
+                <p>Lorem, ipsum dolor.</p>
+            </div>
+            <div class="coming_soon_container_card">
+                <img src="./img/Doctor-strange.jpg" height="70%" width="100%" alt="">
+                <h3>Doctor Strange</h3>
+                <p>Lorem, ipsum dolor.</p>
+            </div>
+            <div class="coming_soon_container_card">
+                <img src="./img/Doctor-strange.jpg" height="70%" width="100%" alt="">
+                <h3>Doctor Strange</h3>
+                <p>Lorem, ipsum dolor.</p>
+            </div>
+            <div class="coming_soon_container_card">
+                <img src="./img/Doctor-strange.jpg" height="70%" width="100%" alt="">
+                <h3>Doctor Strange</h3>
+                <p>Lorem, ipsum dolor.</p>
+            </div>
+            <div class="coming_soon_container_card">
+                <img src="./img/Doctor-strange.jpg" height="70%" width="100%" alt="">
+                <h3>Doctor Strange</h3>
+                <p>Lorem, ipsum dolor.</p>
+            </div>
+            <div class="coming_soon_container_card">
+                <img src="./img/Doctor-strange.jpg" height="70%" width="100%" alt="">
+                <h3>Doctor Strange</h3>
+                <p>Lorem, ipsum dolor.</p>
+            </div>
 
+        </div>
     </section>
     <!-- Coming soon end  -->
 
