coming soon modified

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <!-- Home section start  -->
     <header id="home">
         <nav>
+            <i class="fa-solid fa-bars fa-2xl menubar" style="color: #080808;"></i>
             <!-- <a href=""><i class="fa-solid fa-clapperboard fa-2xl" style="color: #0a51f5;"></i></a> -->
             <h1>Movie.com</h1>
             <ul class="nav-links">
@@ -264,21 +265,27 @@
                 <h3>Doctor Strange</h3>
                 <p>Lorem, ipsum dolor.</p>
             </div>
-            <div class="coming_soon_container_card">
-                <img src="./img/Doctor-strange.jpg" height="70%" width="100%" alt="">
-                <h3>Doctor Strange</h3>
-                <p>Lorem, ipsum dolor.</p>
+            <div class="container_card-info">
+                <div class="container_card-info_1">
+                    <h1>RED DEAD REDEMPTION-2</h1>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquam deleniti, non, quidem vitae
+                        earum tenetur, tempore illo placeat impedit animi praesentium ex dolores iure fuga.</p>
+                    <button>More...</button>
+                </div>
+                <div class="container_card-info_2">
+                    <div class="container_card-info_2_l">
+                        <h1>RED DEAD REDEMPTION-2</h1>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquam deleniti, non, quidem vitae
+                            earum tenetur, tempore illo placeat impedit animi praesentium ex dolores iure fuga.</p>
+                        <button>More...</button>
+                    </div>
+
+                    <div class="container_card-info_2_r">
+
+                    </div>
+                </div>
             </div>
-            <div class="coming_soon_container_card">
-                <img src="./img/Doctor-strange.jpg" height="70%" width="100%" alt="">
-                <h3>Doctor Strange</h3>
-                <p>Lorem, ipsum dolor.</p>
-            </div>
-            <div class="coming_soon_container_card">
-                <img src="./img/Doctor-strange.jpg" height="70%" width="100%" alt="">
-                <h3>Doctor Strange</h3>
-                <p>Lorem, ipsum dolor.</p>
-            </div>
+
 
         </div>
     </section>
